@@ -1,7 +1,6 @@
 var util = require('util');
 var zlib = require('zlib');
 var Request = require('./request');
-var utils = require('./utils');
 
 /**
  * A middleware that gzip encodes the body of the response on the fly if the
@@ -16,7 +15,7 @@ module.exports = function (app, options) {
   options = options || {};
 
   var typeMatcher;
-  if (utils.isRegExp(options.types)) {
+  if (util.isRegExp(options.types)) {
     typeMatcher = options.types;
     delete options.types;
   } else {
