@@ -1,3 +1,4 @@
+var util = require('util');
 var strata = require('./index');
 var utils = require('./utils');
 
@@ -63,7 +64,7 @@ module.exports = function (app) {
       pattern = utils.compileRoute(pattern, keys);
     }
 
-    if (!utils.isRegExp(pattern)) {
+    if (!util.isRegExp(pattern)) {
       throw new strata.Error('Pattern must be a RegExp');
     }
 
