@@ -182,14 +182,6 @@ function isEmptyObject(obj) {
 }
 
 /**
- * Returns true if the given obj is a RegExp.
- * Note: This can be removed on node 0.6 in favor of util.isRegExp.
- */
-function isRegExp(obj) {
-  return Object.prototype.toString.call(obj) == '[object RegExp]';
-}
-
-/**
  * Compares the length property of a and b. Suitable for use as the
  * return value in an Array.prototype.sort callback.
  */
